kubernetes/rabbit_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      volumes:
      - name: rabbitmq-data
        persistentVolumeClaim:
          claimName: rabbitmq-pvc
      containers:
      - name: rabbitmq
        image: unaigarcia02/rabbitmq
        ports:
        - containerPort: 5672 
        - containerPort: 15672
