kubernetes/release.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    service: db

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "15672"
      port: 15672
      targetPort: 15672
  selector:
    service: rabbitmq

---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    service: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: db
    spec:
      containers:
        - env:
            - name: KAGGLE_KEY
              valueFrom:
                configMapKeyRef:
                  key: KAGGLE_KEY
                  name: secrets-txt
            - name: KAGGLE_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: KAGGLE_USERNAME
                  name: secrets-txt
            - name: POSTGRES_DB
              value: juegos
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: secrets-txt
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: secrets-txt
          image: unaigarcia02/postgres:latest
          name: db
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /app/dataset
              name: data-pv
            - mountPath: /var/lib/postgresql/data
              name: pg-data-pv
      restartPolicy: Always
      volumes:
        - name: data-pv
          persistentVolumeClaim:
            claimName: data-pvc
        - name: pg-data-pv
          persistentVolumeClaim:
            claimName: pg-data-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaggle-data
spec:
  replicas: 1
  selector:
    matchLabels:
      service: kaggle-data
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: kaggle-data
    spec:
      containers:
        - env:
            - name: KAGGLE_KEY
              valueFrom:
                configMapKeyRef:
                  key: KAGGLE_KEY
                  name: secrets-txt
            - name: KAGGLE_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: KAGGLE_USERNAME
                  name: secrets-txt
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: secrets-txt
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: secrets-txt
          image: unaigarcia02/kaggle-data
          name: kaggle
          volumeMounts:
            - mountPath: /app/dataset
              name: data-pv
      restartPolicy: Always
      volumes:
        - name: data-pv
          persistentVolumeClaim:
            claimName: data-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: rabbitmq
    spec:
      containers:
        - image: unaigarcia02/rabbitmq:latest
          name: rabbitmq
          ports:
            - containerPort: 5672
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data-pv
      restartPolicy: Always
      volumes:
        - name: rabbitmq-data-pv
          persistentVolumeClaim:
            claimName: rabbitmq-data-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: web
    spec:
      containers:
        - env:
            - name: ALLOW_OVERRIDE
              value: "true"
            - name: KAGGLE_KEY
              valueFrom:
                configMapKeyRef:
                  key: KAGGLE_KEY
                  name: secrets-txt
            - name: KAGGLE_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: KAGGLE_USERNAME
                  name: secrets-txt
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: secrets-txt
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: secrets-txt
          image: unaigarcia02/web:latest
          name: web
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /app/dataset
              name: data-pv
      restartPolicy: Always
      volumes:
        - name: data-pv
          persistentVolumeClaim:
            claimName: data-pvc
            
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
      - path: /rabbitmq
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
